// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrencyFormat constructing number formats should work for respective locale and currency: ar-SA_SAR 1`] = `
CurrencyFormat {
  "currency": "SAR",
  "decimalSymbol": "٫",
  "digits": Array [
    "٠",
    "١",
    "٢",
    "٣",
    "٤",
    "٥",
    "٦",
    "٧",
    "٨",
    "٩",
  ],
  "groupingSymbol": "٬",
  "locale": "ar-SA",
  "maximumFractionDigits": 2,
  "minimumFractionDigits": 2,
  "minusSymbol": "؜-",
  "negativePrefix": "؜-",
  "prefix": "",
  "suffix": " ر.س.‏",
}
`;

exports[`CurrencyFormat constructing number formats should work for respective locale and currency: de-CH_EUR 1`] = `
CurrencyFormat {
  "currency": "EUR",
  "decimalSymbol": ".",
  "digits": Array [
    "0",
    "1",
    "2",
    "3",
    "4",
    "5",
    "6",
    "7",
    "8",
    "9",
  ],
  "groupingSymbol": "’",
  "locale": "de-CH",
  "maximumFractionDigits": 2,
  "minimumFractionDigits": 2,
  "minusSymbol": "-",
  "negativePrefix": "EUR-",
  "prefix": "EUR ",
  "suffix": "",
}
`;

exports[`CurrencyFormat constructing number formats should work for respective locale and currency: de-DE_EUR 1`] = `
CurrencyFormat {
  "currency": "EUR",
  "decimalSymbol": ",",
  "digits": Array [
    "0",
    "1",
    "2",
    "3",
    "4",
    "5",
    "6",
    "7",
    "8",
    "9",
  ],
  "groupingSymbol": ".",
  "locale": "de-DE",
  "maximumFractionDigits": 2,
  "minimumFractionDigits": 2,
  "minusSymbol": "-",
  "negativePrefix": "-",
  "prefix": "",
  "suffix": " €",
}
`;

exports[`CurrencyFormat constructing number formats should work for respective locale and currency: en-GB_GBP 1`] = `
CurrencyFormat {
  "currency": "GBP",
  "decimalSymbol": ".",
  "digits": Array [
    "0",
    "1",
    "2",
    "3",
    "4",
    "5",
    "6",
    "7",
    "8",
    "9",
  ],
  "groupingSymbol": ",",
  "locale": "en-GB",
  "maximumFractionDigits": 2,
  "minimumFractionDigits": 2,
  "minusSymbol": "-",
  "negativePrefix": "-£",
  "prefix": "£",
  "suffix": "",
}
`;

exports[`CurrencyFormat constructing number formats should work for respective locale and currency: en-IN_INR 1`] = `
CurrencyFormat {
  "currency": "INR",
  "decimalSymbol": ".",
  "digits": Array [
    "0",
    "1",
    "2",
    "3",
    "4",
    "5",
    "6",
    "7",
    "8",
    "9",
  ],
  "groupingSymbol": ",",
  "locale": "en-GB",
  "maximumFractionDigits": 2,
  "minimumFractionDigits": 2,
  "minusSymbol": "-",
  "negativePrefix": "-₹",
  "prefix": "₹",
  "suffix": "",
}
`;

exports[`CurrencyFormat constructing number formats should work for respective locale and currency: en-US_USD 1`] = `
CurrencyFormat {
  "currency": "USD",
  "decimalSymbol": ".",
  "digits": Array [
    "0",
    "1",
    "2",
    "3",
    "4",
    "5",
    "6",
    "7",
    "8",
    "9",
  ],
  "groupingSymbol": ",",
  "locale": "en-US",
  "maximumFractionDigits": 2,
  "minimumFractionDigits": 2,
  "minusSymbol": "-",
  "negativePrefix": "-$",
  "prefix": "$",
  "suffix": "",
}
`;

exports[`CurrencyFormat constructing number formats should work for respective locale and currency: es-ES_EUR 1`] = `
CurrencyFormat {
  "currency": "EUR",
  "decimalSymbol": ",",
  "digits": Array [
    "0",
    "1",
    "2",
    "3",
    "4",
    "5",
    "6",
    "7",
    "8",
    "9",
  ],
  "groupingSymbol": ".",
  "locale": "es-ES",
  "maximumFractionDigits": 2,
  "minimumFractionDigits": 2,
  "minusSymbol": "-",
  "negativePrefix": "-",
  "prefix": "",
  "suffix": " €",
}
`;

exports[`CurrencyFormat constructing number formats should work for respective locale and currency: fa-IR_IRR 1`] = `
CurrencyFormat {
  "currency": "IRR",
  "decimalSymbol": undefined,
  "digits": Array [
    "۰",
    "۱",
    "۲",
    "۳",
    "۴",
    "۵",
    "۶",
    "۷",
    "۸",
    "۹",
  ],
  "groupingSymbol": "٬",
  "locale": "fa-IR",
  "maximumFractionDigits": 0,
  "minimumFractionDigits": 0,
  "minusSymbol": "‎−",
  "negativePrefix": "‎−‎ریال ",
  "prefix": "‎ریال ",
  "suffix": "",
}
`;

exports[`CurrencyFormat constructing number formats should work for respective locale and currency: fr-CH_CHF 1`] = `
CurrencyFormat {
  "currency": "CHF",
  "decimalSymbol": ".",
  "digits": Array [
    "0",
    "1",
    "2",
    "3",
    "4",
    "5",
    "6",
    "7",
    "8",
    "9",
  ],
  "groupingSymbol": " ",
  "locale": "fr-CH",
  "maximumFractionDigits": 2,
  "minimumFractionDigits": 2,
  "minusSymbol": "-",
  "negativePrefix": "-",
  "prefix": "",
  "suffix": " CHF",
}
`;

exports[`CurrencyFormat constructing number formats should work for respective locale and currency: ja_JPY 1`] = `
CurrencyFormat {
  "currency": "JPY",
  "decimalSymbol": undefined,
  "digits": Array [
    "0",
    "1",
    "2",
    "3",
    "4",
    "5",
    "6",
    "7",
    "8",
    "9",
  ],
  "groupingSymbol": ",",
  "locale": "ja",
  "maximumFractionDigits": 0,
  "minimumFractionDigits": 0,
  "minusSymbol": "-",
  "negativePrefix": "-￥",
  "prefix": "￥",
  "suffix": "",
}
`;

exports[`CurrencyFormat constructing number formats should work for respective locale and currency: nl-NL_EUR 1`] = `
CurrencyFormat {
  "currency": "EUR",
  "decimalSymbol": ",",
  "digits": Array [
    "0",
    "1",
    "2",
    "3",
    "4",
    "5",
    "6",
    "7",
    "8",
    "9",
  ],
  "groupingSymbol": ".",
  "locale": "nl-NL",
  "maximumFractionDigits": 2,
  "minimumFractionDigits": 2,
  "minusSymbol": "-",
  "negativePrefix": "€ -",
  "prefix": "€ ",
  "suffix": "",
}
`;

exports[`CurrencyFormat constructing number formats should work for respective locale and currency: pt_BRL 1`] = `
CurrencyFormat {
  "currency": "BRL",
  "decimalSymbol": ",",
  "digits": Array [
    "0",
    "1",
    "2",
    "3",
    "4",
    "5",
    "6",
    "7",
    "8",
    "9",
  ],
  "groupingSymbol": ".",
  "locale": "pt",
  "maximumFractionDigits": 2,
  "minimumFractionDigits": 2,
  "minusSymbol": "-",
  "negativePrefix": "-R$ ",
  "prefix": "R$ ",
  "suffix": "",
}
`;

exports[`CurrencyFormat constructing number formats should work for respective locale and currency: zh_CNY 1`] = `
CurrencyFormat {
  "currency": "CNY",
  "decimalSymbol": ".",
  "digits": Array [
    "0",
    "1",
    "2",
    "3",
    "4",
    "5",
    "6",
    "7",
    "8",
    "9",
  ],
  "groupingSymbol": ",",
  "locale": "zh",
  "maximumFractionDigits": 2,
  "minimumFractionDigits": 2,
  "minusSymbol": "-",
  "negativePrefix": "-¥",
  "prefix": "¥",
  "suffix": "",
}
`;
